--- a/company.html
+++ b/company.html
@@ -51,7 +51,7 @@ company's main vision is to create "out of the box" game titles using a
 tool chain based on both open-source and licensed software.<br /><br />Thanks
 to its central location, Sakari Games offers close communication and
 support&nbsp; when needed for Western-European and UK clients.<br /><br /></p><p><img style="width: 182px; height: 40px;" alt="LearnTec" src="images/LOGO_png%20copy.png" /><br />Sakari Games is a Learntec Partner</p><p>
-<img style="width: 120px; height: 30px;" alt="Mac and iOS Developer" src="images/store.steampowered.png" vspace="5" /><br />Sakari Games distibutes own games on the Steam platform.<br /></p><p><img style="width: 135px; height: 30px;" alt="Mac and iOS Developer" src="images/AppleDev.gif" /><br />Sakari Games is a licensed Apple iOS and Mac Developer.<br /></p>
+<img style="width: 120px; height: 30px;" alt="Mac and iOS Developer" src="images/store.steampowered.png" vspace="5" /><br />Sakari Games distibutes games on the Steam platform.<br /></p><p><img style="width: 135px; height: 30px;" alt="Mac and iOS Developer" src="images/AppleDev.gif" /><br />Sakari Games is a licensed Apple iOS and Mac Developer.<br /></p>
 
 <p><a href="http://www.blender.org"><img style="border: 0px solid ; width: 109px; height: 32px;" alt="blender.org" src="images/blender.gif" vspace="5" /><br />
 </a>Sakari Games uses Blender software.<br /><br />
@@ -83,8 +83,8 @@ Sakari Games uses Unity software.<br /><br /><br /><a href="http://dutchgamesass
 </table>
 <div align="center">
 <div align="center"><span class="style6 style2">Sakari
-Games | Bisschopstraat 16 -9&nbsp; | 2060 Antwerp Belgium |
-info@sakarigames.com | +32 32 37 36 20</span><br />
+Games | Veemarkt 6&nbsp; | 2000 Antwerp Belgium |
+info@sakarigames.com | +32 (0) 487 55 12 38</span>
 </div>
 <div align="center">
 </div>
