--- a/contact.html
+++ b/contact.html
@@ -37,11 +37,11 @@
               <br />
               <a href="mailto:info@sakarigames.com" class="menu"><strong>info@sakarigames.com<br />
               </strong></a></span></p>
-          <p><span class="small"><a href="mailto:info@sakarigames.com" class="menu"><strong>+32 32 37 36 20<br />
+          <p><span class="small"><a href="mailto:info@sakarigames.com" class="menu"><strong>+32 0487 55 12 38<br />
           </strong></a></span><span class="small"><a href="mailto:info@sakarigames.com" class="menu"><strong><br />
           </strong></a></span>Office adress:</p>
-          <p><strong>Sakari Games</strong><br />Bisschopstraat 16- 9<br />
-            2060 Antwerp<br />
+          <p><strong>Sakari Games</strong><br />Veemarkt 6<br />
+            2000 Antwerp<br />
             Belgium</p>
           <p>&nbsp;</p>
           <p><span class="small"><a href="mailto:info@sakarigames.com" class="menu"><br />
@@ -68,8 +68,8 @@
 </tbody></table>
 <div align="center">
 <div align="center"><span class="style6 style2">Sakari
-Games | Bisschopstraat 16 -9&nbsp; | 2060 Antwerp Belgium |
-info@sakarigames.com | +32 32 37 36 20</span>
+Games | Veemarkt 6&nbsp; | 2000 Antwerp Belgium |
+info@sakarigames.com | +32 (0) 487 55 12 38</span>
 </div>
 <div align="center">
 </div>
