--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	color: #F7941D;
 	font-weight: bold;
 }
-</style></head><body>
+</style></head>
+<body>
 <table class="frameset" align="center" border="0" cellpadding="0" cellspacing="0" height="264" width="625">
   <tbody><tr>
     <td rowspan="3" background="images/leftbar.jpg" width="23"><br />
@@ -39,8 +40,8 @@
           
               
               <p><strong class="style1"><br />
-              <span class="menu style7" /></strong><br />
-<a href="https://app-liv.com"><span style="font-weight: bold;" /></a><strong class="style1"><span class="menu style7">Services</span><span class="style1"><br />
+              <span class="menu style7"></span></strong><br />
+<a href="https://app-liv.com"><span style="font-weight: bold;"></span></a><strong class="style1"><span class="menu style7">Services</span><span class="style1"><br />
               </span></strong><span class="small"><br />
 The main activity of Sakari Games is creating high quality game
 content. This encompasses code and artwork for games, light games or
@@ -78,7 +79,7 @@ your company feel free to contact us at<br />
                 <br />
                 </a>or  call<br />
                 <br />
-                <strong>+32 32 37 36 20</strong></span></p>
+                <strong>+32 (0) 487 55 12 38</strong></span></p>
           <p>&nbsp;</p>
           <p align="right"><span class="style6 style2"><img src="images/logoSmall.gif" height="15" width="90" /></span></p>
           </blockquote></td>
@@ -93,8 +94,8 @@ your company feel free to contact us at<br />
 </tbody></table>
 <div align="center">
 <div align="center"><span class="style6 style2">Sakari
-Games | Bisschopstraat 16 -9&nbsp; | 2060 Antwerp Belgium |
-info@sakarigames.com | +32 32 37 36 20</span>
+Games | Veemarkt 6&nbsp; | 2000 Antwerp Belgium |
+info@sakarigames.com | +32 (0) 487 55 12 38</span>
 </div>
 <div align="center">
 </div>
@@ -109,7 +110,10 @@ sc_partition=21;
 sc_security="9e50d535";
 </script>
 
-<script type="text/javascript" src="http://www.statcounter.com/counter/counter_xhtml.js" /><noscript><div class="statcounter"><a class="statcounter" href="http://www.statcounter.com/"><img class="statcounter" src="http://c22.statcounter.com/3292473/0/9e50d535/1/" alt="counter
+<script type="text/javascript" src="http://www.statcounter.com/counter/counter_xhtml.js"></script><noscript><div
+class="statcounter"><a class="statcounter"
+href="http://www.statcounter.com/"><img class="statcounter"
+src="http://c22.statcounter.com/3292473/0/9e50d535/1/" alt="counter
 easy hit" /></a></div></noscript>
 <!-- End of StatCounter Code -->
 </div></body></html>
