--- a/team.html
+++ b/team.html
@@ -129,8 +129,8 @@ Playlogic&nbsp;Game&nbsp;Factory,&nbsp;NL<br />
 </table>
 <div align="center">
 <div align="center"><span class="style6 style2">Sakari
-Games | Bisschopstraat 16 -9&nbsp; | 2060 Antwerp Belgium |
-info@sakarigames.com | +32 32 37 36 20</span>
+Games | Veemarkt 6&nbsp; | 2000 Antwerp Belgium |
+info@sakarigames.com | +32 (0) 487 55 12 38</span>
 </div>
 <div align="center">
 </div>
