--- a/press.html
+++ b/press.html
@@ -84,8 +84,8 @@ lanceert computerspel rond diamantkraak"</a><br />
 </table>
 <div align="center">
 <div align="center"><span class="style6 style2">Sakari
-Games | Bisschopstraat 16 -9&nbsp; | 2060 Antwerp Belgium |
-info@sakarigames.com | +32 32 37 36 20</span>
+Games | Veemarkt 6&nbsp; | 2000 Antwerp Belgium |
+info@sakarigames.com | +32 (0) 487 55 12 38</span>
 </div>
 <div align="center">
 </div>
