--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div id="video-wrap" class="video-wrap">
     <div class="content-overlay">
     <img style="width: 100%; height: auto;" alt="brands"
- src="images/Logo2.png">
+ src="images/IntroLogo.png">
     </div>
  <canvas id="canvas"></canvas>
   <script src='js/lwgowr.js'></script>
