--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ of these great brands. </span><br><br>
 
 <script type="text/javascript"
 </script>
-  <script src="http://code.jquery.com/jquery-3.1.0.slim.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js"></script>
   <script src="backgroundVideo.js"></script>
   <script>
       
@@ -266,7 +266,7 @@ function scrollFunction() {
 }
       
       $(window).scroll(function(){
-    $(".content-overlay").css("opacity", 1 - $(window).scrollTop() / 250);
+    $(".content-overlay").css("opacity", 1 - $(window).scrollTop() / 150);
   });
 
 </script>
