--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ of these great brands. </span><br><br>
 
 <script type="text/javascript"
 </script>
-  <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js"></script>
+  <script src="js/jquery-3.3.1.min.js"></script>
   <script src="backgroundVideo.js"></script>
   <script>
       
