--- a/index.html
+++ b/index.html
@@ -53,57 +53,20 @@
     <img style="width: 100%; height: auto;" alt="brands"
  src="images/Logo.png">
     </div>
- <canvas id="canvas"></canvas>
+ <canvas id="canvas">
   <script src='js/lwgowr.js'></script>
     <script  src="js/index.js"></script>
-
+</canvas>
     </div>
 		<div class="thinline">
 	</div>
-	
-	
-<table
- style="width: 60%; height: 200px; text-align: left; margin-left: auto; margin-right: auto;"
- border="0" cellpadding="0" cellspacing="0">
-  <tbody>
-    <tr>
-      <td>
-	  <br>
-<table
- style="width: 60%; height: 200px; text-align: left; margin-left: auto; margin-right: auto;"
- border="0" cellpadding="0" cellspacing="0">
-  <tbody>
-    <tr>
-      <td>
-      <table
- style="width: 700px; height: 117px; text-align: left; margin-left: auto; margin-right: auto;"
- border="0" cellpadding="0" cellspacing="15">
-        <tbody>
-          <tr>
-            <td style="width: 20%; vertical-align: top;"><img
- style="width: 200px; height: 109px;" alt="GameLogo"
- src="images/IntroLogo.png"></td>
-            <td
- style="vertical-align: top; color: rgb(253, 253, 253);"><span
- style="font-family: Verdana; font-size: 13.3333px; font-style: normal; font-weight: normal; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; background-color: rgb(0, 0, 0); display: inline ! important; float: none;">Cargo
-Breach is an Intense VR Arcade Shooter with Unique Gesture based Weapon
-Mechanics. You hunt down escaped creatures in dark atmospheric
-spaceship corridors. All presented in stunning AAA graphics.</span></td>
-          </tr>
-        </tbody>
-      </table>
-      </td>
-    </tr>
-    <tr>
-      <td style="text-align: center;"><span
- style="font-family: Verdana; font-size: 13.3333px; font-style: normal; font-weight: normal; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; background-color: rgb(0, 0, 0); display: inline ! important; float: none; color: white;">Cargo
-Breach is the debut title of No 28 Games and harnasses the power
-of these great brands. </span><br><br>
-      <img style="width: 715px; height: 52px;" alt="brands"
- src="images/brands.png"></td>
-    </tr>
-  </tbody>
-</table>
+		<div class="textblock">
+            <p>Introducing the AutomizeR a highly customisable interface that drives your production processes. The 2.8” TFT LCD touchscreen grands you acces to all needed settings features to automate and stream your workflow. The device drives all your types of hardware including Stepper-motors and servo-motors, Call us and hear what we can do for you.</p>
+	</div>
+      <div class="partners">
+                      <p>We proudly introduce our partners</p>
+	       </div>
+   
 <br>
 
 		<div class="thinline">
@@ -265,9 +228,9 @@ function scrollFunction() {
     }
 }
       
-      $(window).scroll(function(){
-    $(".content-overlay").css("opacity", 1 - $(window).scrollTop() / 150);
-  });
+//      $(window).scroll(function(){
+//    $(".content-overlay").css("opacity", 1 - $(window).scrollTop() / 150);
+//  });
 
 </script>
 
