--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <link rel="icon" type="image/png" href="icon/favicon-32x32.png" sizes="32x32">
 <link rel="icon" type="image/png" href="icon/favicon-16x16.png" sizes="16x16">
 <link rel="icon" type="image/png" href="icon/favicon-128.png" sizes="128x128">
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 <meta name="application-name" content="&nbsp;">
 <meta name="msapplication-TileColor" content="#FFFFFF">
 <meta name="msapplication-TileImage" content="icon/mstile-144x144.png">
@@ -61,10 +62,10 @@
 		<div class="thinline">
 	</div>
 		<div class="textblock">
-            <p>Introducing the AutomizeR a highly customisable interface that drives your production processes. The 2.8” TFT LCD touchscreen grands you acces to all needed settings features to automate and stream your workflow. The device drives all your types of hardware including Stepper-motors and servo-motors, Call us and hear what we can do for you.</p>
+            <p><b><i><font color="#f7941d" size="5">Introducing the AutomizeR</font></i></b><br> a highly customisable interface that drives your production processes. The 2.8” TFT LCD touchscreen grands you acces to all needed settings features to automate and stream your workflow. The device drives all your types of hardware including Stepper-motors and servo-motors, Call us and hear what we can do for you.</p>
 	</div>
       <div class="partners">
-                      <p>We proudly introduce our partners</p>
+                      <p>our partners</p>
 	       </div>
    
 <br>
