--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
 	</div>
 		<div class="textblock">
             <p><b><i><font color="#f7941d" size="5">Introducing the AutomizeR</font></i></b><br> a highly customisable interface that drives your production processes. The 2.8” TFT LCD touchscreen grands you acces to all needed settings features to automate and stream your workflow. The device drives all your types of hardware including Stepper-motors and servo-motors, Call us and hear what we can do for you.</p>
-	</div>
-      <div class="partners">
-                      <p>our partners</p>
-	       </div>
-   
 <br>
-
+                </div>
 		<div class="thinline">
 	</div>
+<!--
+      <div class="partners">
+                      <p>See it in action<br>some more text</p>
+	       </div>
+-->
 	<br>
 	<br>
 <div class="slideshow-container">
