--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
 		<div class="thinline">
 	</div>
 		<div class="textblock">
-            <p><b><i><font color="#f7941d" size="5">Introducing the AutomizeR</font></i></b><br> a highly customisable interface that drives your production processes. The 2.8” TFT LCD touchscreen grands you acces to all needed settings features to automate and stream your workflow. The device drives all your types of hardware including Stepper-motors and servo-motors, Call us and hear what we can do for you.</p>
+            <p><b><i><font color="#f7941d" size="5">Introducing the AutomizeR</font></i></b><br> a highly customisable interface that drives your production processes. The 2.8” TFT LCD touchscreen grands you acces to all needed settings features to automate and stream your workflow. The device drives all your types of hardware including Stepper-motors and servo-motors, contact us and hear what we can do for you.</p>
 <br>
                 </div>
 		<div class="thinline">
 	</div>
+    <p><a href="mailto:info@automizer.eu">info@automizer.eu</a></p>
 <!--
       <div class="partners">
                       <p>See it in action<br>some more text</p>
@@ -74,95 +75,9 @@
 -->
 	<br>
 	<br>
-<div class="slideshow-container">
-
-<div class="mySlides fade">
-  <img src="images/CargoBreachPromoScreen_1.jpg" style="width:100%">
-
-</div>
-
-<div class="mySlides fade">
-  <img src="images/CargoBreachPromoScreen_2.jpg" style="width:100%">
-</div>
-
-<div class="mySlides fade">
-  <img src="images/CargoBreachPromoScreen_3.jpg" style="width:100%">
-</div>
-
-<div class="mySlides fade">
-  <img src="images/CargoBreachPromoScreen_4.jpg" style="width:100%">
-</div>
-
-<div class="mySlides fade">
-  <img src="images/CargoBreachPromoScreen_5.jpg" style="width:100%">
-</div>
-
-<div class="mySlides fade">
-  <img src="images/CargoBreachPromoScreen_6.jpg" style="width:100%">
-</div>
-
-<div class="mySlides fade">
-  <img src="images/CargoBreachPromoScreen_7.jpg" style="width:100%">
-</div>
-
-<div class="mySlides fade">
-  <img src="images/CargoBreachPromoScreen_8.jpg" style="width:100%">
-</div>
-
-<div class="mySlides fade">
-  <img src="images/CargoBreachPromoScreen_9.jpg" style="width:100%">
-</div>
-
-<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-<a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-</div>
-<br>
-
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span> 
-  <span class="dot" onclick="currentSlide(2)"></span> 
-  <span class="dot" onclick="currentSlide(3)"></span> 
-  <span class="dot" onclick="currentSlide(4)"></span>
-  <span class="dot" onclick="currentSlide(5)"></span>
-  <span class="dot" onclick="currentSlide(6)"></span>
-  <span class="dot" onclick="currentSlide(7)"></span>
-  <span class="dot" onclick="currentSlide(8)"></span>
-  <span class="dot" onclick="currentSlide(9)"></span>
-</div>
-<br>
-<div style="text-align: center;"><small><small><small><br>
-<big><big><span style="color: white;">FIND US ON</span></big></big></small></small></small><br>
-<br>
-<a href="https://www.facebook.com/N028Games/"target="_blank"><img
- style="border: 0px solid ; width: 32px; height: 32px;"
- alt="Facebook" title="Facebook" src="images/fb.png"></a>
-&nbsp; <a
- href="https://www.youtube.com/channel/UCwa6YO3OqOlxyFuCtCuqelw" target="_blank"><img
- style="border: 0px solid ; width: 32px; height: 32px;"
- alt="YouTube" title="YouTube" src="images/YT.png"></a>
- 
- &nbsp;&nbsp;<a href="http://store.steampowered.com/app/722040/Cargo_Breach/" target="_blank"><img
- style="border: 0px solid ; width: 32px; height: 32px;"
- alt="BUY" title="BUY" src="images/STEAM.png"></a>
- 
-&nbsp;&nbsp;<a href="mailto:info@no28.games"><img
- style="border: 0px solid ; width: 32px; height: 32px;"
- alt="mail" title="mail" src="images/Mail.png"></a>
- &nbsp;&nbsp;<a href="https://twitter.com/No28Games" target="_blank"><img
- style="border: 0px solid ; width: 32px; height: 32px;"
- alt="mail" title="Twitter" src="images/TW.png"></a>
-&nbsp;&nbsp;<a href="http://www.sakarigames.com/press"><img
- style="border: 0px solid ; width: 32px; height: 32px;"
- alt="Press" title="Press" src="images/About.png"></a><br>
-<br>
-<small><small><small><small><small><br>
 </small></small></small><span
- style="color: silver;">all right reserved No. 28 Games 2017</span><small><br>
+ style="color: silver;">all right reserved Sakari Games 2018</span><small><br>
 <br>
-</small></small></small><small><small><small><small><small><small><img
- style="width: 115px; height: 48px;" alt="Logo"
- src="images/No28GamesLogo.png"></small></small></small></small></small></small></div>
 
 </body>
 </html>
