--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<div class="thinline">
 	</div>
 		<div class="textblock">
-            <p><b><i><font color="#f7941d" size="5">Introducing the AutomizeR</font></i></b><br> a highly customisable interface that drives your production processes. The 2.8” TFT LCD touchscreen grands you acces to all needed settings features to automate and stream your workflow. The device drives all your types of hardware including Stepper-motors and servo-motors, contact us and hear what we can do for you.</p>
+            <p><b><i><font color="#f7941d" size="5">Introducing the AutomizeR</font></i></b><br> a highly customisable interface that drives your production processes. The 2.8” TFT LCD touchscreen grands you access to all needed settings features to automate and stream your workflow. The device drives every type of hardware including Stepper-motors and servo-motors, contact us and hear what we can do for you.</p>
 <br>
                 </div>
 		<div class="thinline">
@@ -67,6 +67,10 @@
     <source src="video/video.mp4" type="video/mp4">
     <source src="mov_bbb.ogg" type="video/ogg">
   </video>
+          		<div class="textblock">
+            <p><b><i><font color="#f7941d" size="5">Less handwork more production</font></i></b><br> The sample video shows how the AtomizeR automates the production of fishnets. The first step is counting the amount of mazes. This is done by a custom made disk on a industrial grade stepper-motor. The amount of mazes counted and the speed are fully adjustable. Next the Automizer drives the sewing machine. Timings between these steps can be tweaked in miliseconds. The last step will pull cord at the given amount of milimeters with a double steppermotor. There is aditional functionality to turn of steps in the cycle and count the mazes or pull the cord only once. The entire system can be set to manual, meaning one cycle per impulse or fully automatic.</p>
+<br>
+                </div>
 </div> 
 
 <script> 
