--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@ function playPause() {
 } 
 
 </script> 
-      
+                		<div class="partners">
+            <p><b><i><font color="#f7941d" size="5">Our Partners</font></i></b></p>
+            <img style="width: 80%; height: auto;" alt="brands" src="images/brands.png"><br>
+                            
+<br>
+                </div>
     <p></p>
       <div class="partners">
                       <p>Veemarkt 6, 2000 Antwerp, Belgium<br>+32 487 55 123 8 | info@automizer.eu</p>
