--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ function playPause() {
       <div class="partners">
                       <p>Veemarkt 6, 2000 Antwerp, Belgium<br>+32 487 55 123 8 | info@automizer.eu</p>
 <span
- style="color: silver;">all right reserved Sakari Games 2018</span><br>
+ style="color: silver;">all right reserved Sakari Games 2018</span><br><br>
 </div>
 </body>
 </html>
